<resources>
    <string name="app_name" translatable="false">Rehabili</string>
    <string name="title_home" translatable="false">Menu</string>
    <string name="title_dashboard" translatable="false">User</string>
    <string name="title_notifications" translatable="false">History</string>
    <string name="fixText" translatable="false">Guest01</string>
    <string name="armdown">팔을 내려주세요</string>
    <string name="armup">팔을 올려주세요</string>
    <string name="wristdown">손목을 틀어주세요</string>
    <string name="wristup">손목을 세워주세요</string>
    <string name="griphard">힘주어 꽉 쥐세요</string>
    <string name="gripsoft">힘을 풀어 주세요</string>
    <string name="wrongText">자세가 잘못되었습니다. 화면의 이미지를 참고하여 휴대폰을 다시 잡아주세요. 혹은 올바른 자세로 운동 해 주세요.</string>
    <string name="elbow">팔 구부렸다 펴기</string>
    <string name="elbow_text">&#160;[ 굴곡 신전 운동 ]
        &#160;휴대폰을 영상과 같이 잡고 가능한 수평을 유지한 채로 팔을 움직여 주세요.
        &#160;손목의 각도는 팔과 일직선을 유지하는 것이 좋습니다.
        &#160;바르지 않은 각도로 운동 시 약한 진동이 발생되며, 이때의 동작은 카운트 되지 않습니다.
        &#160;카운트 시 진동이 발생되며, 왕복 1회에 1씩 카운트 됩니다.
        &#160;단계가 높아질수록 카운트에 필요한 팔의 가동 각도가 더 커집니다.
        &#160;목표달성 시 운동기록이 어플리케이션에 기록됩니다.</string>
    <string name="wrist">손목 돌리기</string>
    <string name="wrist_text">&#160;[ 회외 운동 ]
        &#160;휴대폰을 영상과 같이 잡고 가능한 수평을 유지한 채로 팔을 움직여 주세요.
        &#160;팔과 몸은 적당한 거리를 유지해 주세요.
        &#160;손목이 몸과 너무 가까워지거나 멀어지면 운동 시 약한 진동이 발생되며, 이때의 동작은 카운트 되지 않습니다.
        &#160;카운트 시 진동이 발생되며, 왕복 1회에 1씩 카운트 됩니다.
        &#160;단계가 높아질수록 카운트에 필요한 손목의 가동 각도가 더 커집니다.
        &#160;목표달성 시 운동기록이 어플리케이션에 기록됩니다.</string>
    <string name="grip">주먹 쥐기</string>
    <string name="grip_text">"&#160;[ 힘주어 쥐기 운동 ]
        &#160;휴대폰의 카운트에 맞추어 팔에 힘을 주어 주먹을 꽉 쥐세요.
        &#160;휴대폰의 카운트는 약 5초 정도의 주기를 지닙니다.
        &#160;20 회 반복시 종료되며 운동이 기록됩니다. "</string>
    <string name="user_info">사용자 정보</string>
    <string name="history">재활 기록 확인</string>
    <string name="main_page">메인으로 이동</string>
    <string name="app_info">앱 정보</string>
    <string name="ver_info">버전 정보</string>
    <string name="develop_tool">개발 도구</string>
    <string name="release_date">배포 일자</string>
    <string name="must">필수</string>
    <string name="app_info_content">&#160;팔 기브스 제거 후 재활 운동을 하는데 도움을 주는 재활 도우미 어플리케이션입니다.          &#160;이용해주셔서 감사합니다.</string>
    <string name="welcome">&#160;님, 힘내세요!</string>
    <string name="yourHistory">&#160;님의 재활 기록입니다.</string>
    <string name="musthave">* 는 필수 입력 요소입니다.</string>
    <string name="goodjob">수고하셨습니다!</string>
    <string name="restart">재시작</string>
    <string name="to_home">홈으로</string>
    <string name="exercise_type">종목 이름</string>
    <string name="time">회</string>
    <string name="finished">완료하였습니다!</string>
    <string name="rehabi">재활이</string>
    <string name="user_info_edit">사용자 정보 수정</string>
    <string name="application_info">애플리케이션 정보</string>
    <string name="recommand">※ 추천 횟수는 20회 입니다.</string>
    <string name="start">시작</string>
    <string name="left">왼손</string>
    <string name="right">오른손</string>
    <string name="goal">목표:</string>
    <string name="level">단계:</string>
    <string name="man">만</string>
    <string name="se">세</string>
    <string name="username">이름</string>
    <string name="age">나이</string>
    <string name="weight">몸무게</string>
    <string name="height">신장</string>
    <string name="userinfoedit">수정하기</string>
    <string name="checkHand">사용할 손을 체크해주세요</string>
    <string name="set_goal_num">목표 횟수를 입력하세요</string>
    <string name="under50">50회 이하의 값을 입력하세요</string>
    <string name="putIdName">ID와 이름을 입력하세요</string>
    <string name="remove_history">재활 기록 삭제</string>
    <string name="remove_really">재활기록을 삭제하시겠습니까? /n 모든 기록이 삭제됩니다.</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="removed">삭제되었습니다.</string>
    <string name="next">시작</string>
    <string name="jong">종목</string>
    <string name="lev">단계</string>
    <string name="tim">횟수</string>
    <string name="one_more">뒤로가기 버튼을 한번 더 누르면 종료됩니다.</string>
    <string name="day__time">&#160;&#160;&#160;&#160;&#160;&#160;날짜&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;시간&#160;&#160;&#160;&#160;&#160;&#160;</string>
</resources>