<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Set">

    <TextView
        android:id="@+id/exerciseType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="exerciseType"
        android:textSize="20dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.088" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:text="@string/level"
        android:textColor="@color/black"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@id/textGoal"
        app:layout_constraintEnd_toEndOf="@+id/textGoal" />

    <TextView
        android:id="@+id/textGoal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/goal"
        android:textColor="@color/black"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="@id/goalNumber"
        app:layout_constraintEnd_toStartOf="@id/goalNumber" />

    <TextView
        android:id="@+id/hoei"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="@id/goalNumber"
        app:layout_constraintStart_toEndOf="@id/goalNumber"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/goalNumber"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/toUser"
        android:text="@string/recommand"
        android:textSize="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/textGoal"
        app:layout_constraintEnd_toEndOf="@+id/hoei"
        app:layout_constraintTop_toBottomOf="@+id/goalNumber"/>


    <Spinner
        android:id="@+id/level"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="56dp"
        android:entries="@array/level"
        app:layout_constraintBottom_toTopOf="@id/goalNumber"
        app:layout_constraintStart_toStartOf="@id/goalNumber" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/arm_button"
        android:text="@string/start"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        app:layout_constraintVertical_bias="0.5" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/toUser"
        app:layout_constraintStart_toStartOf="@id/textGoal"
        app:layout_constraintEnd_toEndOf="@id/hoei">

        <RadioButton
            android:id="@+id/radioLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/left" />

        <RadioButton
            android:id="@+id/radioRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/right"
            android:layout_marginLeft="50dp"/>
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>